--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,2 +1,5 @@
-$primary-color: #1C5D99;
-$secondary-color: #639FAB;
+$primary-color: #362638;
+$secondary-color: #534042;
+$primary-shade: #BCB9A3;
+$secondary-shade: #ADBFB0;
+$light: #DEE4D7;
