--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,3 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
 @import './mixins';
 @import './variables';
+
+
+.center {
+    margin: auto;
+    padding: 0;
+    text-align: center;
+}
+
+
+.button-primary {
+    background-color: $secondary-color;
+    color: white;
+    border: 0;
+}
