--- a/src/app/pages/register-page/register-page.html
+++ b/src/app/pages/register-page/register-page.html
@@ -1,3 +1,22 @@
-<p>
-  register-page works!
-</p>
+
+  <div class="row">
+    <div class="col-sm">
+      <div class="title">
+        <h4>User Registration</h4>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm">
+      <div class="center">
+          <div class="profile-photo">
+            <img src="{{ profilePhoto }}">
+          </div><br>
+          <input type="file" name="file" id="file" (change)="onChangePhoto($event)"><br>
+          <input type="email" name="email" id="email" placeholder="Email"><br>
+          <input type="password" name="password" id="password" placeholder="Password"><br>
+          <input type="text" name="name" id="name" placeholder="Name"><br>
+          <button type="submit" class="btn button-primary">Submit</button>
+      </div>
+    </div>
+  </div>
