--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,5 @@
-$primary-color: #362638;
-$secondary-color: #534042;
-$primary-shade: #BCB9A3;
-$secondary-shade: #ADBFB0;
-$light: #DEE4D7;
+$primary-color: #092348;
+$secondary-color: #155074;
+$primary-shade: #33A2AB;
+$secondary-shade: #90E0D0;
+$light: #ffff;
