--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,4 +2,4 @@ $primary-color: #092348;
 $secondary-color: #155074;
 $primary-shade: #33A2AB;
 $secondary-shade: #90E0D0;
-$light: #ffff;
+$light: unquote('#ffff');
