--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,10 +1,9 @@
 @import './mixins';
 @import './variables';
 
-
 .center {
     margin: auto;
-    padding: 0;
+    padding: auto;
     text-align: center;
 }
 
