--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,28 @@
 @import '~sass/variables';
 
-.banner {
+.app-head {
     background-color: $primary-color;
     width: 100%;
     overflow: hidden;
-    h1 {
-        color: white;
+    .banner {
+        margin-left: 0.5em;
+        h1 {
+            color: white;
+        }
+    }
+
+    .avatar-container {
+        margin: 0.12em 0.5em 0.12em 0.5em;
+    }
+
+    .right {
+        float: right;
+    }
+    .left {
+        float: left;
     }
 }
+
 
 .line {
     padding: 0;
