--- a/src/app/pages/register-page/register-page.html
+++ b/src/app/pages/register-page/register-page.html
@@ -2,20 +2,22 @@
 <div class="row">
   <div class="col-sm">
     <div class="title">
-      <h4>User Registration</h4>
+      <h4>{{ (loader) ? 'Authenticating...' : 'User Registration' }}</h4>
     </div>
   </div>
 </div>
-<div class="row">
-  <div class="col-sm">
-    <div class="center">
-      <input class="form-item" type="email" name="email" id="email" placeholder="Email" [(ngModel)]="userData.email"><br>
-      <input class="form-item" type="password" name="password" id="password" placeholder="Password" [(ngModel)]="userData.password"><br>
-      <input class="form-item" type="password" name="confirm-password" id="confirm-password" placeholder="Confirm password" [(ngModel)]="passwordConfirmation"><br>
-      <input class="form-item" type="text" name="display-name" id="display-name" placeholder="Display Name" [(ngModel)]="userData.displayName"><br>
-      <button class="btn btn-primary form-item" type="submit" (click)="onClickRegister()" [disabled]="loader">
+<div class="register-container" *ngIf="!loader">
+  <div class="row">
+    <div class="col-sm">
+      <div class="center">
+        <input class="form-item-text" type="email" name="email" id="email" placeholder="Email" [(ngModel)]="userData.email"><br>
+        <input class="form-item-text" type="password" name="password" id="password" placeholder="Password" [(ngModel)]="userData.password"><br>
+        <input class="form-item-text" type="password" name="confirm-password" id="confirm-password" placeholder="Confirm password" [(ngModel)]="passwordConfirmation"><br>
+        <input class="form-item-text" type="text" name="display-name" id="display-name" placeholder="Display Name" [(ngModel)]="userData.displayName"><br>
+        <button class="btn btn-primary form-item-text" type="submit" (click)="onClickRegister()" [disabled]="loader">
           <span>{{ (loader) ? 'Please wait...' : 'Register' }}</span>
-      </button>
+        </button>
+      </div>
     </div>
   </div>
 </div>
