update, if there is no thumbnail url will show raw photo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
   <!-- <div class="avatar-container right" *ngIf="isLogin">
     <app-avatar [profilePhoto]="profilePhoto" [displayName]="displayName"></app-avatar>
   </div> -->
+  <div class="right" style="color: white;">{{ displayName }}</div>
 </div>
 
 
