--- a/src/app/components/file-upload/file-upload.component.html
+++ b/src/app/components/file-upload/file-upload.component.html
@@ -12,7 +12,7 @@
         <div class="single-file" *ngIf="!allowMultipleFiles">
             <div class="image-container center">
                 <span *ngIf="previewList.length === 0">Loading Image...</span>
-                <img src="{{ previewList[previewList.length - 1] }}" alt="" class="center">
+                <img src="{{ previewList[0] }}" alt="" class="center">
             </div>
         </div>
         
