--- a/src/app/pages/update-profile-page/update-profile-page.html
+++ b/src/app/pages/update-profile-page/update-profile-page.html
@@ -50,7 +50,7 @@
                 <button type="submit" class="btn btn-primary form-item-text" [disabled]="fileLoader" (click)="onClickSubmit()">{{ (fileLoader) ? 'Please wait...' : 'Submit' }}</button>
                 <p>Fields with asterisk '*' are required.</p>
             </div>
-            <!-- {{ user | json }} -->
+            {{ user | json }}
         </div>
     </div>
 </div>
