--- a/src/app/components/file-upload/file-upload.component.html
+++ b/src/app/components/file-upload/file-upload.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
     <div class="col-sm">
         
         <div class="multiple-file" *ngIf="allowMultipleFiles">
@@ -17,7 +17,7 @@
         </div>
         
     </div>
-</div>
+</div> -->
 <div class="row">
     <div class="col-sm">
         <div class="center">
