--- a/src/app/components/file-upload/file-upload.component.scss
+++ b/src/app/components/file-upload/file-upload.component.scss
@@ -1,38 +1,38 @@
-@import '~sass/variables';
-.single-file {
-    .image-container {
-        width: auto;
-        height: auto;
-        margin: 0.3em;
-        overflow: hidden;
-            img {
-                background-color: $secondary-shade;
-                max-height: 15em;
-                max-width: 15em;
-                width: auto;
-                height: auto;
-                margin: 0; 
-            }
+// @import '~sass/variables';
+// .single-file {
+//     .image-container {
+//         width: auto;
+//         height: auto;
+//         margin: 0.3em;
+//         overflow: hidden;
+//             img {
+//                 background-color: $secondary-shade;
+//                 max-height: 15em;
+//                 max-width: 15em;
+//                 width: auto;
+//                 height: auto;
+//                 margin: 0; 
+//             }
     
-    }
-}
+//     }
+// }
 
-.multiple-file {
-    .image-container {
-        float: left;
-        width: auto;
-        height: auto;
-        margin: 0.3em;
-        overflow: hidden;
-            img {
-                max-height: 15em;
-                max-width: 15em;
-                width: auto;
-                height: auto;
-                margin: 0; 
-            }
+// .multiple-file {
+//     .image-container {
+//         float: left;
+//         width: auto;
+//         height: auto;
+//         margin: 0.3em;
+//         overflow: hidden;
+//             img {
+//                 max-height: 15em;
+//                 max-width: 15em;
+//                 width: auto;
+//                 height: auto;
+//                 margin: 0; 
+//             }
     
-    }
-}
+//     }
+// }
 
 
