--- a/src/app/pages/update-profile-page/update-profile-page.scss
+++ b/src/app/pages/update-profile-page/update-profile-page.scss
@@ -7,12 +7,13 @@
     }
 }
 .gender-container {
-    margin: 0.5em;
+    margin: 0.5em 4.3em;
     overflow: auto;
+    border-bottom: 1px solid $secondary-shade;
     .gender-label {
         margin: 0 2.3em 0 0;
         padding: 0.5em 0 0.5em 0;
-        background-color: $secondary-shade;
+        // background-color: $secondary-shade;
         span {
             margin: 0 0.3em 0 0.3em;
             
@@ -26,12 +27,17 @@
     padding: 0;
     overflow: auto;
     label {
-        background-color: $secondary-shade;
+        // background-color: $secondary-shade;
         padding: 0 0 0 0.2rem;
         margin: 0.5em;
+        // border-bottom: 1px solid $secondary-shade
         input {
             width: 20.5rem;
             margin: 0;
+        }
+        span {
+            padding: 0 0 0.7em 0;
+            border-bottom: 1px solid $secondary-shade;
         }
     }
 
