--- a/src/app/pages/admin-page/admin-page.html
+++ b/src/app/pages/admin-page/admin-page.html
@@ -1,3 +1,16 @@
-<p>
-  admin-page works!
-</p>
+<h3 class="center title">{{ 'Admin Panel' }}</h3>
+
+<div class="category-create-contianer center">
+  <input type="text" name="" id="" class="form-item-text" placeholder="Category ID" [(ngModel)]="category.id"><br>
+  <input type="text" name="" id="" class="form-item-text" placeholder="Category Name" [(ngModel)]="category.name"><br>
+  <input type="text" name="" id="" class="form-item-text" placeholder="Category Description" [(ngModel)]="category.description"><br>
+  <input type="number" name="" id="" class="form-item-text" placeholder="Number of posts per page" [(ngModel)]="category.numberOfPostsPerPage"><br>
+  <button class="btn btn-primary form-item-text" (click)="onClickCreateCategory()" [disabled]="loader">{{ loader ? 'Please wait...' : 'Create Category' }}</button>
+</div>
+
+<h5>Category List</h5>
+<ul *ngFor="let category of categoryList" >
+  <li>{{ category.id }} / {{ category.name }} / {{ category.description }} / {{ category.numberOfPostsPerPage }}</li>
+</ul>
+
+<!-- {{ category | json }} -->
