--- a/src/app/components/post-form/post-form.component.html
+++ b/src/app/components/post-form/post-form.component.html
@@ -2,6 +2,6 @@
     <input type="text" name="" id="" class="post-title" placeholder="Post title..." [(ngModel)]="post.title"><br>
     <textarea name="" id="" cols="60" rows="5" class="post-content" placeholder="Post content..." [(ngModel)]="post.content"></textarea><br>
     <label for="liveChat" class="left live-chat" ><input type="checkbox" name="liveChat" id="liveChat" [(ngModel)]="post.options.liveChat"><span style="margin: 0.3em;">Enable Live Chat</span></label>
-    <button class="btn btn-primary right">Post</button><br>
+    <button class="btn btn-primary right" [disabled]="! post.content && loader" (click)="onSubmit()">Submit</button><br>
 </div><br>
-{{ post | json }}
+<!-- {{ post | json }} -->
