--- a/src/app/pages/admin-page/admin-page.html
+++ b/src/app/pages/admin-page/admin-page.html
@@ -1,16 +1,9 @@
-<h3 class="center title">{{ 'Admin Panel' }}</h3>
-
-<div class="category-create-contianer center">
-  <input type="text" name="" id="" class="form-item-text" placeholder="Category ID" [(ngModel)]="category.id"><br>
-  <input type="text" name="" id="" class="form-item-text" placeholder="Category Name" [(ngModel)]="category.name"><br>
-  <input type="text" name="" id="" class="form-item-text" placeholder="Category Description" [(ngModel)]="category.description"><br>
-  <input type="number" name="" id="" class="form-item-text" placeholder="Number of posts per page" [(ngModel)]="category.numberOfPostsPerPage"><br>
-  <button class="btn btn-primary form-item-text" (click)="onClickCreateCategory()" [disabled]="loader">{{ loader ? 'Please wait...' : 'Create Category' }}</button>
+<div class="admin-container" >
+  <div class="admin-menu" *ngFor="let key of menuKeys">
+      <button class="btn {{ (menu[key]) ? 'btn-secondary' : 'btn-outline-secondary' }}" (click)="onClickMenu(key)">{{ key }}</button>
+  </div>
+<hr>
+  <app-category *ngIf="menu.Category"></app-category>
+  <div class="fake-1" *ngIf="menu.Fake1">This is fake 1 component</div>
+  <div class="fake-2" *ngIf="menu.Fake2">This is fake 2 component</div>
 </div>
-
-<h5>Category List</h5>
-<ul *ngFor="let category of categoryList" >
-  <li>{{ category.id }} / {{ category.name }} / {{ category.description }} / {{ category.numberOfPostsPerPage }}</li>
-</ul>
-
-<!-- {{ category | json }} -->
